google site verification

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ title: "Egbert Rijke's Academic Webpage"
 url: "https://egbertrijke.github.io"
 baseurl: ""
 
+google_site_verification : "aawQMrJgjxLKDsVFIetXRMV3j0CV7sODZAXKx-PlIF8"
+
 author:
   name: "Egbert Rijke"
   url: "https://egbertrijke.github.io"
