slightly update description

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-primer
 lang: "en"
 timezone: "America/New_York"
-title: "Egbert Rijke's Academic Webpage"
+title: "Egbert Rijke"
 url: "https://egbertrijke.github.io"
 baseurl: ""
 
